# bit-ai

./: Cargo.toml  README.md
docs/plans/: 2026-03-10-bit-ai-design.md  2026-03-10-bit-ai-implementation.md
src/: error.rs  lib.rs  model.rs  provider.rs  registry.rs  sse.rs  types.rs
src/providers/: anthropic.rs  deepseek.rs  google.rs  groq.rs  mistral.rs  mod.rs  ollama.rs  openai.rs  openai_compat.rs  xai.rs
tests/: core_test.rs  integration_test.rs  sse_test.rs
