[package]
name = "bit-ai"
version = "0.1.0"
edition = "2024"
description = "Unified multi-provider LLM API for Rust"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
futures = "0.3"
tokio-stream = "0.1"
thiserror = "2"
tokio-util = "0.7"
tracing = "0.1"
pin-project-lite = "0.2"

[features]
default = ["all-providers"]
all-providers = ["openai", "anthropic", "google", "mistral", "deepseek", "groq", "xai", "ollama"]
openai = []
anthropic = []
google = []
mistral = []
deepseek = []
groq = []
xai = []
ollama = []

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
